[package]
name = "nonograms"
version = "0.1.0"
authors = ["Eunchong Yu <kroisse@gmail.com>"]
edition = "2018"
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.13"
pretty_env_logger = "0.4"
rand = "0.7"
vgtk = "0.2"
